Presentation components modified

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -14,3 +14,4 @@ LOGIN = /jsp/login.jsp
 REGISTRATION = /jsp/registration.jsp
 APPOINTMENT = /jsp/appointment.jsp
 CONGRATULATION = /jsp/congratulation.jsp
+BILL = /jsp/bill.jsp
